# CovEMIDiff

./: .clang-format  .gitignore  CMakeLists.txt  CovParser.cpp  EMI.cpp  EMIASTConsumer.cpp  EMIASTVisitor.cpp  EMIFrontendAction.cpp  README.md  main.cpp  run.sh
covemi/: CMakeLists.txt  CoverageParser.cpp  EMIASTConsumer.cpp  EMIASTVisitor.cpp  EMIFrontendAction.cpp  EMIUtil.cpp  main.cpp
covemi/include/: CoverageParser.h  EMIASTConsumer.h  EMIASTVisitor.h  EMIConst.h  EMIFrontendAction.h  EMIFrontendActionFactory.h  EMIUtil.h
diff/: CMakeLists.txt  DiffASTConsumer.cpp  DiffASTVisitor.cpp  DiffFrontendAction.cpp  DiffFrontendActionFactory.cpp  DiffParser.cpp  DiffReason.cpp  EMIDiff.cpp  Util.cpp  main.cpp
diff/include/: Const.h  DiffASTConsumer.h  DiffASTVisitor.h  DiffFrontendAction.h  DiffFrontendActionFactory.h  DiffParser.h  DiffReason.h  EMIDiff.h  Enum.h  Util.h
emi/: CMakeLists.txt  EMIASTConsumer.cpp  EMIASTVisitor.cpp  EMIFrontendAction.cpp  main.cpp
emi/include/: EMIASTConsumer.h  EMIASTVisitor.h  EMIFrontendAction.h  EMIFrontendActionFactory.h  EMINewFrontendActionFactory.h
emidiff/: CMakeLists.txt  DiffASTConsumer.cpp  DiffASTVisitor.cpp  DiffFrontendAction.cpp  DiffFrontendActionFactory.cpp  DiffParser.cpp  DiffReason.cpp  DiffUtil.cpp  EMIDiff.cpp  main.cpp
emidiff/include/: Const.h  DiffASTConsumer.h  DiffASTVisitor.h  DiffConst.h  DiffEnum.h  DiffFrontendAction.h  DiffFrontendActionFactory.h  DiffParser.h  DiffReason.h  DiffUtil.h  EMIDiff.h  Util.h
include/: CovParser.h  CoverageParser.h  EMI.h  EMIASTConsumer.h  EMIASTVisitor.h  EMIFrontendAction.h
